# z-image-app

./: .gitignore  Cargo.toml  INTEGRATION.md  README.md  build_app.sh  cubecl.toml  z_image_ffi.h
.swift-build/: Package.swift
.swift-build/Sources/ZImage/: ContentView.swift  ZImageApp.swift  ZImageBridge.swift
ZImageApp/: ContentView.swift  LongCatBridge.swift  VideoGenerationView.swift  ZImage-Bridging-Header.h  ZImageBridge.swift  module.modulemap
src/: lib.rs  longcat_ffi.rs
src/server/: handlers.rs  mod.rs  models.rs  queue.rs  state.rs
src/training/: dataset.rs  latent_cache.rs  lora_io.rs  mod.rs  train_loop.rs
test_data/: dog_beach_final.txt
