[package]
name = "z-image-app"
version = "0.1.0"
edition = "2024"

[lib]
name = "z_image_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
z-image = { git = "https://github.com/holg/z-image-burn.git", branch = "develop" }
qwen3-burn = { git = "https://github.com/holg/qwen3-burn.git" }
longcat-burn = { git = "https://github.com/holg/longcat-burn.git", optional = true }
umt5-burn = { git = "https://github.com/holg/umt5-burn.git", optional = true }
burn = { git = "https://github.com/tracel-ai/burn.git", features = ["store"] }
half = "2.4"
libc = "0.2"
once_cell = "1.19"
parking_lot = "0.12"

# egui dependencies (optional, for cross-platform GUI)
eframe = { version = "0.30", optional = true, default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui_extras = { version = "0.30", optional = true, features = ["image"] }
image = "0.25"
rfd = { version = "0.15", optional = true }
reqwest = { version = "0.12", optional = true, features = ["blocking"] }
directories = { version = "5.0", optional = true }
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }
open = { version = "5.0", optional = true }
rand = { version = "0.9", optional = true }

[features]
default = ["wgpu"]
egui = ["dep:eframe", "dep:egui_extras", "dep:rfd", "dep:reqwest", "dep:directories", "dep:chrono", "dep:serde_json", "dep:open", "dep:rand"]
train = ["burn/autodiff", "burn/train", "dep:serde_json"]
video = ["dep:longcat-burn", "dep:umt5-burn"]

# Backend features - choose ONE when building
# macOS (Metal via Candle): cargo build --release --features metal
# macOS (Metal via WGPU):   cargo build --release --features wgpu-metal
# Windows/Linux NVIDIA:     cargo build --release --features cuda
# Windows/Linux (Vulkan):   cargo build --release --features vulkan
# CPU only:                 cargo build --release --features cpu
metal = ["burn/candle", "burn/candle-metal", "burn/ndarray"]
wgpu-metal = ["burn/wgpu", "burn/metal"]
cuda = ["burn/candle", "burn/candle-cuda"]
native-cuda = ["burn/cuda"]
vulkan = ["burn/wgpu", "burn/vulkan"]
wgpu = ["burn/wgpu"]
cpu = ["burn/ndarray"]

# Video feature with backend - use e.g. "video,video-metal"
video-metal = ["video", "longcat-burn/metal", "umt5-burn/metal"]
video-cuda = ["video", "longcat-burn/cuda", "umt5-burn/cuda"]
video-cpu = ["video", "longcat-burn/cpu", "umt5-burn/cpu"]

[build-dependencies]
cbindgen = "0.27"

# Release profile optimizations
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Also optimize dependencies in dev builds for faster iteration
[profile.dev.package."*"]
opt-level = 2

[[bin]]
name = "test_generate"
path = "src/bin/test_generate.rs"

[[bin]]
name = "test_tokenizer"
path = "src/bin/test_tokenizer.rs"

[[bin]]
name = "test_embedding"
path = "src/bin/test_embedding.rs"

[[bin]]
name = "debug_layer"
path = "src/bin/debug_layer.rs"

[[bin]]
name = "debug_attn"
path = "src/bin/debug_attn.rs"

[[bin]]
name = "test_chat"
path = "src/bin/test_chat.rs"

[[bin]]
name = "z-image-gui"
path = "src/bin/gui.rs"
required-features = ["egui"]

[[bin]]
name = "convert_models"
path = "src/bin/convert_models.rs"

[[bin]]
name = "test_lowmem"
path = "src/bin/test_lowmem.rs"

[[bin]]
name = "compute_embedding"
path = "src/bin/compute_embedding.rs"

[[bin]]
name = "generate_from_embedding"
path = "src/bin/generate_from_embedding.rs"

[[bin]]
name = "gui_lowmem"
path = "src/bin/gui_lowmem.rs"
required-features = ["egui"]
